--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,7 @@ if(EMSCRIPTEN)
 
     set(USE_WIIUSE 0)
     set(USE_DNS_C 1)
+    set(USE_GLES2 1)
     set(NO_SHADERC on)
     add_definitions(-DNO_IRR_COMPILE_WITH_X11_)
     add_definitions(-DNO_IRR_COMPILE_WITH_WAYLAND_DEVICE_)
@@ -100,15 +101,16 @@ if(EMSCRIPTEN)
     add_definitions(-DNO_IRR_COMPILE_WITH_VULKAN_)
     add_definitions(-DNO_IRR_COMPILE_WITH_OPENGL_)
     add_definitions(-D_IRR_COMPILE_WITH_OGLES2_)
+    add_definitions(-DDISABLE_RPC)
 
-    
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -sUSE_SDL=2 -fwasm-exceptions -sSUPPORT_LONGJMP=wasm")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sUSE_SDL=2 -fwasm-exceptions -sSUPPORT_LONGJMP=wasm")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L${CMAKE_SOURCE_DIR}/wasm/prefix/lib/ -lcrypto -logg -lvorbis -fwasm-exceptions")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -sUSE_SDL=2 -fwasm-exceptions -sSUPPORT_LONGJMP=wasm -pthread")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sUSE_SDL=2 -fwasm-exceptions -sSUPPORT_LONGJMP=wasm -pthread")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L${CMAKE_SOURCE_DIR}/wasm/prefix/lib/ -sASSERTIONS=1 -sSTACK_SIZE=30000000 -sFULL_ES2 -sINITIAL_MEMORY=512MB -sWASM_BIGINT -sALLOW_MEMORY_GROWTH -lcrypto -logg -lvorbis -fwasm-exceptions")
+
     if(CMAKE_BUILD_TYPE MATCHES Debug)
-        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -sEXCEPTION_DEBUG=1 --profiling-funcs")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g3")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g3")
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --profiling")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
     endif()
 
 endif()
