fix compilation issues on newest emsdk

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -684,7 +684,7 @@ int main() {
   return 0;
 }
 " NO_LIBATOMIC_NEEDED)
-if (NOT NO_LIBATOMIC_NEEDED)
+if (NOT NO_LIBATOMIC_NEEDED AND NOT EMSCRIPTEN)
     target_link_libraries(supertuxkart atomic)
 endif()
 
