--- a/lib/graphics_engine/CMakeLists.txt
+++ b/lib/graphics_engine/CMakeLists.txt
@@ -90,6 +90,7 @@ set(GE_SOURCES
     src/ge_vulkan_scene_manager.cpp
     src/ge_vulkan_shader_manager.cpp
     src/ge_vulkan_skybox_renderer.cpp
+    src/ge_vulkan_sun_scene_node.cpp
     src/ge_vulkan_texture.cpp
     src/ge_vulkan_texture_descriptor.cpp
     src/ge_gl_texture.cpp
