--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -833,7 +833,15 @@ if(MSVC OR MINGW)
   add_custom_target(stkshaders SOURCES ${STK_SHADERS})
 endif()
 
-if(MSVC OR MINGW)
+if(MSVC)
+  SET(CMAKE_SHARED_LINKER_FLAGS /MANIFEST:NO)
+  add_custom_command(
+    TARGET supertuxkart POST_BUILD COMMAND "mt.exe" 
+    -manifest \"windows\\dpi_aware.manifest\" 
+    -outputresource:\"$<TARGET_FILE_DIR:supertuxkart>\"\;\#1)
+endif()
+
+if(MINGW)
   SET(CMAKE_SHARED_LINKER_FLAGS /MANIFEST:NO)
   target_sources(supertuxkart PRIVATE windows/windows_config.rc)
 endif()
