Add `StartupWMClass` to the desktop file
This resolves some edge-cases where desktop icon isn't shown, like in Gnome's dash panel for example.

--- a/data/supertuxkart.desktop
+++ b/data/supertuxkart.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Name=SuperTuxKart
 Icon=supertuxkart
+StartupWMClass=supertuxkart
 #I18N: Generic name in desktop file entry, summary in AppData and short description in Google Play
 GenericName[ar]=لعبة سباق سيارات ثلاثية الأبعاد مفتوحة المصدر
 GenericName[be]=3D-гульня для гонак на картах з адкрытым зыходным кодам
