Add point and spot lights rendering for vulkan

--- a/lib/graphics_engine/CMakeLists.txt
+++ b/lib/graphics_engine/CMakeLists.txt
@@ -69,6 +69,7 @@ set(GE_SOURCES
     src/ge_culling_tool.cpp
     src/ge_dx9_texture.cpp
     src/ge_main.cpp
+    src/ge_occlusion_culling.cpp
     src/ge_texture.cpp
     src/ge_vma.cpp
     src/ge_vulkan_2d_renderer.cpp
@@ -85,6 +86,7 @@ set(GE_SOURCES
     src/ge_vulkan_environment_map.cpp
     src/ge_vulkan_fbo_texture.cpp
     src/ge_vulkan_features.cpp
+    src/ge_vulkan_light_handler.cpp
     src/ge_vulkan_mesh_cache.cpp
     src/ge_vulkan_mesh_scene_node.cpp
     src/ge_vulkan_scene_manager.cpp
