--- a/lib/wiiuse/CMakeLists.txt
+++ b/lib/wiiuse/CMakeLists.txt
@@ -2,7 +2,7 @@
 # http://academic.cleardefinition.com/
 # Iowa State University HCI Graduate Program/VRAC
 
-cmake_minimum_required(VERSION 3.6.0)
+cmake_minimum_required(VERSION 3.6.0...4.0)
 
 # Set package properties
 project(WiiUse)
