--- a/lib/libsquish/CMakeLists.txt
+++ b/lib/libsquish/CMakeLists.txt
@@ -8,7 +8,7 @@
 #   Unix and VS: SSE2 support is enabled by default
 #    use BUILD_SQUISH_WITH_SSE2 and BUILD_SQUISH_WITH_ALTIVEC to override
 
-CMAKE_MINIMUM_REQUIRED(VERSION 3.6.0)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.6.0...4.0)
 
 OPTION(BUILD_SQUISH_WITH_OPENMP "Build with OpenMP." OFF)
 
