Add RISC-V to linux build script + some small fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ option(SERVER_ONLY "Create a server only (i.e. no graphics or sound)" OFF)
 option(CHECK_ASSETS "Check if assets are installed in ../stk-assets" ON)
 option(USE_SYSTEM_ANGELSCRIPT "Use system angelscript instead of built-in angelscript. If you enable this option, make sure to use a compatible version." OFF)
 option(USE_SYSTEM_ENET "Use system ENet instead of the built-in version, when available." ON)
+option(USE_SYSTEM_MCPP "Use system mcpp instead of the built-in version, when available." ON)
 CMAKE_DEPENDENT_OPTION(USE_IPV6 "Allow create or connect to game server with IPv6 address, system enet will not be used." ON
   "NOT USE_SWITCH" OFF)
 option(USE_SYSTEM_WIIUSE "Use system WiiUse instead of the built-in version, when available." OFF)
@@ -320,8 +321,10 @@ if(NOT SERVER_ONLY)
 endif()
 
 # Libmcpp
-find_library(MCPP_LIBRARY NAMES mcpp libmcpp)
-find_path(MCPP_INCLUDEDIR NAMES mcpp_lib.h PATHS)
+if (USE_SYSTEM_MCPP)
+    find_library(MCPP_LIBRARY NAMES mcpp libmcpp)
+    find_path(MCPP_INCLUDEDIR NAMES mcpp_lib.h PATHS)
+endif()
 if (NOT MCPP_LIBRARY OR NOT MCPP_INCLUDEDIR)
     add_subdirectory("${PROJECT_SOURCE_DIR}/lib/mcpp")
     include_directories(BEFORE "${PROJECT_SOURCE_DIR}/lib/mcpp")
